# sales-site

./: .dockerignore  .gitignore  Dockerfile  README.md  heroku.yml  manage.py  notes.md  pyproject.toml
apps/: urls.py
apps/listing/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/listing/migrations/: 0001_initial.py  0002_item_owner.py  0003_item_photo.py
apps/listing/templates/: checkout.html
apps/listing/templates/listing/: create.html  index.html  item_detail.html  list.html  saved.html  search_results.html
apps/users/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
apps/users/migrations/: 0001_initial.py  0002_user_native_name_user_phone_no_alter_user_email_and_more.py  0003_remove_user_native_name_remove_user_phone_no_and_more.py  0004_user_photo.py  0005_profile.py  0006_remove_user_photo.py  0007_user_bio_user_location_user_photo_delete_profile.py
apps/users/templates/: profileupdate.html  user_update.html  userprofile.html
apps/users/templates/auth/: login.html  profile.html  register.html
apps/users/templates/biling/: checkout.html
apps/users/templates/users/: index.html  login.html
devproject/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: main.js
static/: style.css
templates/: __base.html  __footer.html  __header.html  __messages.html
